Backend: Refactor, POST systems/analyses
