# openapi/openapi.yaml
@@ -257,25 +257,41 @@ paths:
                 $ref: "#/components/schemas/SystemOutputsReturn"
 
   /systems/analyses:
-    get:
+    post:
       summary: Returns analysis result(s) of one or multiple systems
       description: Returns analysis result(s) of one or multiple systems
-      parameters:
-        - in: query
-          name: system_ids
-          description: a string of comma-separated system ids
-          schema:
-            type: string
-          required: true
-          example: "61b02e0baadd2f674845b1c2,6254e4cd0f1133e7436ef298"
-        - in: query
-          name: pairwise_performance_gap
-          description: returns the pairwise performance gap. Requires the length of systems_ids to be 2.
-          schema:
-            type: string
-            example: "true"
-          required: true
-            
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                system_ids:
+                  description: a string of comma-separated system ids
+                  type: string
+                  example: "61b02e0baadd2f674845b1c2,6254e4cd0f1133e7436ef298"
+                pairwise_performance_gap:
+                  description: returns the pairwise performance gap. Requires the length of systems_ids to be 2.
+                  type: boolean
+                feature_to_bucket_info:
+                  description: feature -> bucket info
+                  type: object
+                  additionalProperties:
+                    type: object
+                    properties:
+                      number:
+                        type: integer
+                      setting:
+                        type: array
+                        items:
+                          type: array
+                          items:
+                            type: number
+                          minItems: 2
+                          maxItems: 2
+                        example: [[0.0, 0.4], [0.4, 1.0]]
+  
       responses:
         "200":
           description: OK
@@ -468,7 +484,7 @@ components:
             fine_grained:
               type: object
           required: [overall, calibration, fine_grained]
-      required: [task_name, model_name, metric_names, language, reload_stat, is_print_case, conf_value, tokenizer, results]
+      required: [task_name, model_name, metric_names, language, reload_stat, is_print_case, conf_value, tokenizer, features, results]
 
     APIError:
       type: object
